# Farm

./: .gitignore  .gitmodules  CMakeLists.txt  Farm.sln  README.md  mycmake.sh
Classes/: CMakeLists.txt  CSVLoader.cpp  CSVLoader.h  Crop.cpp  Crop.h  CropLayer.cpp  CropLayer.h  DynamicData.cpp  DynamicData.h  EffectLayer.cpp  EffectLayer.h  Entity.cpp  Entity.h  FarmScene.cpp  FarmScene.h  FarmUILayer.cpp  FarmUILayer.h  Fruit.cpp  Fruit.h  Good.h  GoodInterface.h  GoodLayer.cpp  GoodLayer.h  HelloWorldScene.cpp  HelloWorldScene.h  Seed.cpp  Seed.h  SliderDialog.cpp  SliderDialog.h  Soil.cpp  Soil.h  SoilLayer.cpp  SoilLayer.h  StaticData.cpp  StaticData.h  TextDialog.cpp  TextDialog.h  Toast.cpp  Toast.h  main.cpp
Farm/: Farm.vcxproj  Farm.vcxproj.filters
Farm/Debug/: vc141.idb
Farm/Debug/Farm.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Farm.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Farm/Resources/data/: crops.csv  soils.csv  static_data.plist
Farm/Resources/farm_map/: farm.tmx
Farm/Resources/scene/: farm_layer.xml  slider_dialog.xml
Farm/Resources/sprite/: farm_crop_res.xml
Resources/data/: default_data.plist  static_data.plist
Resources/farm_map/: farm.tmx
Resources/fonts/: 1.fnt
Resources/scene/: bag_good_layer.xml  bag_good_list.xml  farm_crop_info.xml  farm_layer.xml  text_dialog.xml
Resources/sprite/: farm_ui_res.xml  good_layer_ui_res.xml  slider_dialog_ui_res.xml
cmake/: FindSDL2_gfx.cmake  FindSDL2_mixer.cmake  FindSDL2_net.cmake
